<resources>
    <string name="app_name">Bathroom Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="does_it_need_a_key">Does it need a Key?</string>
    <string name="name">Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="does_it_have_handicap_stalls">Does it have Handicap Stalls?</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="deleteMessage">This Bathroom can not be Recovered if Deleted</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_use_your_current_location">Do You want to Use Your Current Location?</string>
    <string name="nameEdit">Name:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="is_a_key_needed">Is a Key needed?:</string>
    <string name="does_it_have_handicap_stallsEdit">Does it have Handicap Stalls?:</string>
    <string name="unavailable">Unavailable?</string>
    <string name="out_of_order">Out of Order</string>
    <string name="closed_store">Closed Store</string>
    <string name="long_wait">Long Wait?</string>
    <string name="bathroom_status">Bathroom Status:</string>
    <string name="navigate">Navigate</string>
</resources>