<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editBathroomFragment">

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/nameEdit"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LongitudeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="11dp"
        android:text="@string/longitude"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTV" />

    <TextView
        android:id="@+id/LatitudeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="5dp"
        android:text="@string/latitude"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LongitudeTV" />

    <TextView
        android:id="@+id/keyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="7dp"
        android:text="@string/is_a_key_needed"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LatitudeTV" />

    <TextView
        android:id="@+id/handicapTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="10dp"
        android:text="@string/does_it_have_handicap_stallsEdit"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyTV" />

    <Button
        android:id="@+id/unavailableBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="36dp"
        android:text="@string/unavailable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handicapTV" />

    <RadioGroup
        android:id="@+id/unavailableGroupRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="53dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unavailableBtn">

        <RadioButton
            android:id="@+id/outOfOrderRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/out_of_order" />

        <RadioButton
            android:id="@+id/closedRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/closed_store" />

    </RadioGroup>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/nameTV"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="test" />

    <TextView
        android:id="@+id/longTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/LongitudeTV"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        tools:text="test" />

    <TextView
        android:id="@+id/latTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/LatitudeTV"
        app:layout_constraintTop_toBottomOf="@+id/longTextView"
        tools:text="test" />

    <TextView
        android:id="@+id/keyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/keyTV"
        app:layout_constraintTop_toBottomOf="@+id/longTextView"
        tools:text="test" />

    <TextView
        android:id="@+id/handicapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="145dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/handicapTV"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="test" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/longWaitTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/long_wait"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/longWaitGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longWaitTV">

        <RadioButton
            android:id="@+id/longWaitYesRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/longWaitNoRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="14dp"
        android:text="@string/bathroom_status"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handicapTV" />

    <TextView
        android:id="@+id/bathroomStatusTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/handicapTV"
        tools:text="test" />

    <Button
        android:id="@+id/navigateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="10dp"
        android:text="@string/navigate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longWaitGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>